# AuronAI-Trading

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  test_swing_comparison.py  test_swing_tp_fix.py
.claude/agents/: backend-dev.md  code-reviewer.md  data-engineer.md  devops.md  ml-engineer.md  strategy-dev.md  test-engineer.md  trading-expert.md
.claude/commands/: analyze-symbol.md  backtest.md  deploy.md  implement.md  learn-strategy.md  lint.md  market-scan.md  post-pr.md  qa.md  review.md  risk-check.md  sprint-status.md  team.md  test.md
docs/decisions/: 001-daily-timeframe-default.md  002-strategic-enhancements-roadmap.md  003-swing-baseline-strategy-design.md  005-inter-sector-rotation-results.md  006-walk-forward-validation-results.md  007-long-short-strategy-comparison.md  008-swing-strategy-methodology-comparison.md  009-roadmap-estrategico-2026.md  010-dual-momentum-80-20-cash-management.md
docs/technical/: candlestick-data-flow.md  future-enhancements.md  indicator-combinations-research.md  kiro-configuration.md  rolling-walk-forward-implementation.md  swing-lab-architecture.md  swing-lab-comparison.md  swing-strategy-differences.md  swing-tp-strategy-implementation.md
docs/user/: INICIO_RAPIDO.md  RESUMEN_METRICAS.md  como-funciona-tu-backtest-actual.md  costos-trading-reales.md  costos-y-presupuesto.md  dual-momentum-con-aportes-mensuales.md  ejemplo-uso-real.md  entendiendo-velas-y-timeframes.md  estrategia-alternada-explicada.md  estrategia-dual-momentum-explicada.md  estrategia-long-momentum.md  estrategias-para-cuentas-pequenas.md  faq-long-momentum.md  filtros-estrategia-swing.md  frecuencia-rebalanceo-comparacion.md  frecuencias-rebalanceo-completo.md  ia-y-futuro-del-trading.md  libertex-como-operar-acciones-fraccionarias.md  libertex-estado-actual-portfolio.md  libertex-estrategia-agresiva-100-invertido.md  libertex-estrategia-hibrida-ahorro-trading.md  libertex-estrategia-momentum-explicada.md  libertex-mejoras-y-aportes-mensuales.md  libertex-metatrader-guide.md  libertex-niveles-riesgo-momentum.md  long-momentum-implementacion-real.md  metricas-comparacion-estrategias.md  modos-de-operacion.md  momentum-funciona-rotacion-2026.md  phase1-analysis.md  phase1-next-steps.md  plan-crecimiento-1000-inicial.md  proximos-pasos-recomendados.md  rolling-walk-forward-guia.md  slippage-explicado.md  swing-baseline-strategy.md  swing-lab-guide.md  todas-las-estrategias-1000-dolares.md  walk-forward-anchored-vs-rolling.md  walk-forward-optimization-explicado.md  (+1 more)
scripts/: README.md  calculate_current_portfolio_value.py  check_data_availability.py  create_weekly_portfolio_csv.py  debug_momentum_cash.py  demo_long_momentum.py  generate_phase1_report.py  generate_weekly_portfolio_report.py  run_dual_momentum_improved.py  run_dual_momentum_validation.py  run_long_short_comparison.py  run_rolling_walk_forward.py  run_streamlit_app.sh  run_swing_multi_asset_v1.py  run_swing_multi_asset_v2.py  run_swing_no_sl_10symbols_7days.py  run_walk_forward_fixed_params.py  run_walk_forward_full.py  run_walk_forward_validation.py  test_all_rebalance_frequencies.py  test_backtest_end_to_end.py  test_long_momentum_exits.py  test_momentum_libertex.py  test_new_metrics.py  test_rebalance_frequencies.py  test_rolling_walk_forward.py  test_swing_tp_strategy.py  test_timezone_fix.py  test_ui_imports.py  test_walk_forward_30days.py  test_walk_forward_fix.py
src/auronai/: __init__.py
tests/: __init__.py  conftest.py  test_dual_momentum.py  test_e2e_pipeline.py  test_symbol_universe.py
tests/agents/: __init__.py  test_trading_agent.py  test_trading_agent_pro.py
tests/analysis/: test_ai_analyzer.py  test_signal_generator.py
tests/api/: conftest.py  test_api_endpoints.py
tests/backtesting/: __init__.py  test_backtest_runner.py  test_monte_carlo.py  test_run_manager.py  test_sensitivity_analysis.py  test_stress_testing.py
tests/brokers/: test_alpaca_broker.py  test_libertex_broker.py  test_paper_broker.py
tests/core/: test_config.py  test_models_properties.py
tests/data/: test_demo_simulator.py  test_demo_simulator_properties.py  test_duckdb_engine_properties.py  test_feature_store_properties.py  test_market_data_provider.py  test_market_data_provider_properties.py  test_parquet_cache_properties.py
tests/indicators/: test_technical_indicators.py  test_technical_indicators_properties.py
tests/risk/: test_risk_manager.py  (+1 more)
(+87 files in other folders)
