[project]
name = "auronai"
version = "0.1.0"
description = "Sistema de trading algorítmico profesional con análisis técnico, risk management y AI"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "AuronAI Team" }
]
license = { text = "MIT" }
keywords = ["trading", "algorithmic-trading", "technical-analysis", "backtesting", "risk-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core trading
    "yfinance>=0.2.40",
    "anthropic>=0.34.0",
    "alpaca-py>=0.29.0",
    
    # Data manipulation
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pandas-ta>=0.3.14b",
    
    # Machine Learning
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "xgboost>=2.1.0",
    
    # Visualization
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    
    # Data persistence (Swing Lab)
    "pyarrow>=14.0.0",
    "duckdb>=0.10.0",
    
    # UI (Swing Lab)
    "streamlit>=1.31.0",
    
    # Version control
    "gitpython>=3.1.0",
    
    # Configuration
    "python-dotenv>=1.0.0",
    
    # Web API (Phase 2)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "websockets>=13.0",
    "aiohttp>=3.10.0",
    
    # Database (Phase 2)
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "questdb>=2.0.0",
    
    # Async tasks (Phase 2)
    "celery>=5.4.0",

    # Caching (Phase 2)
    "redis>=5.0.0",
    
    # Scheduler (Phase 2)
    "apscheduler>=3.10.0",
    
    # Notifications (Phase 2)
    "python-telegram-bot>=21.0",
    "sendgrid>=6.11.0",
    
    # Backtesting (Phase 2)
    "vectorbt>=0.26.0",

    # Experiment tracking (Phase 2)
    "mlflow>=2.16.0",

    # Logging & Monitoring (Phase 2)
    "structlog>=24.4.0",
    "sentry-sdk>=2.14.0",
    
    # Rate limiting (Phase 2)
    "slowapi>=0.1.9",
    
    # CLI (Phase 2)
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
ml = [
    # FinBERT sentiment analysis (heavy deps, install only when needed)
    "transformers>=4.44.0",
    "torch>=2.4.0",
]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.112.0",
    
    # Linting & Formatting
    "ruff>=0.6.0",
    
    # Type checking
    "mypy>=1.11.0",
    "types-redis>=4.6.0",
    
    # Pre-commit
    "pre-commit>=3.8.0",
]

[project.scripts]
auronai = "auronai.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "pandas_ta.*",
    "alpaca.*",
    "vectorbt.*",
    "mlflow.*",
    "xgboost.*",
    "transformers.*",
    "torch.*",
    "celery.*",
    "questdb.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=auronai",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
    "-v",
]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
